<resources>
    <string name="app_name">EventHub</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Closed Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">Name</string>
    <string-array name="categories">
        <item>Music</item>
        <item>Food</item>
        <item>Beverages</item>
        <item>Sport</item>
    </string-array>
    <string-array name="paginationPageSizes">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="spinner_items">
        <item>London</item>
        <item>New York</item>
        <item>Dublin</item>
    </string-array>
    <string-array name="EventTypes">
        <item>Svadba</item>
        <item>SLavlje</item>
        <item>Veselje</item>
        <item>Rodjendan</item>
    </string-array>
    <string name="email_placeholder">abc@email.com</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account? <font color="#5669FF">Sign up</font></string>
    <string name="sign_up">Sign up\n</string>
    <string name="name_placeholder">Milan Lazarevic\n</string>
    <string name="repeat_password">Repeat password</string>
    <string name="your_password">Your password</string>
    <string name="have_an_account">Already have an account?<font color="#5669FF">Sign in</font></string>
</resources>