<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="613dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/text_800"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_in"
            android:textColor="@color/text_800"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_placeholder"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_home_small_black"
            app:startIconTint="@color/text_500"
            android:layout_marginBottom="10sp"> <!-- Optional: Customize icon tint -->

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Your password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_home_small_black"
            app:startIconTint="@color/text_500"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="20sp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_with_arrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_blue_900"
            android:drawableEnd="@drawable/ic_arrow_right_white"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>